--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
         type="button"
         data-modal-target="cart-modal"
         data-modal-toggle="cart-modal"
-        class="relative inline-flex items-center text-sm font-medium text-center text-white border border-green-500 rounded-md"
+        class="relative inline-flex items-center text-sm font-medium text-center text-white border border-green-500 rounded-md hover:bg-green-500 transition-all duration-200 group"
       >
         <svg
           width="35px"
@@ -18,6 +18,7 @@
           xmlns="http://www.w3.org/2000/svg"
           stroke="#000000"
           transform="rotate(0)"
+          class="group-hover:stroke-white transition-all duration-200"
         >
           <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
           <g
@@ -33,21 +34,25 @@
               stroke="#198754"
               stroke-width="1.536"
               stroke-linecap="round"
+              class="group-hover:stroke-white transition-all duration-100"
             ></path>
             <path
               d="M7.5 18C8.32843 18 9 18.6716 9 19.5C9 20.3284 8.32843 21 7.5 21C6.67157 21 6 20.3284 6 19.5C6 18.6716 6.67157 18 7.5 18Z"
               stroke="#198754"
               stroke-width="1.536"
+              class="group-hover:stroke-white transition-all duration-100"
             ></path>
             <path
               d="M16.5 18.0001C17.3284 18.0001 18 18.6716 18 19.5001C18 20.3285 17.3284 21.0001 16.5 21.0001C15.6716 21.0001 15 20.3285 15 19.5001C15 18.6716 15.6716 18.0001 16.5 18.0001Z"
               stroke="#198754"
               stroke-width="1.536"
+              class="group-hover:stroke-white transition-all duration-100"
             ></path>
             <path
               d="M5 6H16.4504C18.5054 6 19.5328 6 19.9775 6.67426C20.4221 7.34853 20.0173 8.29294 19.2078 10.1818L18.7792 11.1818C18.4013 12.0636 18.2123 12.5045 17.8366 12.7523C17.4609 13 16.9812 13 16.0218 13H5"
               stroke="#198754"
               stroke-width="1.536"
+              class="group-hover:stroke-white transition-all duration-100"
             ></path>
           </g>
         </svg>
