--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,9 @@
   class="w-full h-14 bg-gray-200 sticky top-0 left-0 flex justify-between items-center z-10"
 >
   <div class="container flex justify-between items-center mx-auto bg">
-    <h1 class="text-xl font-semibold">Shopping Quantity Application</h1>
+    <a href="/">
+      <h1 class="text-xl font-semibold">Shopping Quantity Application</h1>
+    </a>
     <div>
       <button
         type="button"
