--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,6 +1,6 @@
 @for (product of products; track product.id) {
 <div
-  class="md:container lg:container mx-auto my-5 py-5 w-fullborder border-slate-300 rounded-lg flex flex-col md:flex-row relative"
+  class="sm:container mx-auto my-5 py-5 w-full sm:border border-slate-300 rounded-lg flex flex-col md:flex-row relative"
 >
   <div class="w-full md:w-4/12 mb-4 md:mb-0">
     <img [src]="product.image" alt="product" class="w-8/12 mx-auto" />
