--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -38,28 +38,26 @@
       </div>
       <!-- Modal body -->
       <div class="p-4 md:p-5 space-y-4">
-        <div *ngIf="cartItems().length === 0" class="text-center">
-          Your cart is empty.
-        </div>
-        <div *ngIf="cartItems().length > 0">
-          <div
-            *ngFor="let item of cartItems()"
-            class="flex justify-between items-center border-b py-4"
-          >
+        @if(cartItems().length === 0) {
+        <div class="text-center">Your cart is empty.</div>
+        } @else { @for (item of cartItems(); track $index) {
+        <div class="flex justify-between items-center border-b py-4">
+          <div class="flex items-center gap-4">
+            <img [src]="item.image" alt="product" class="w-1/12" />
             <div>
               <h3 class="text-lg font-medium">{{ item.name }}</h3>
               <p>Quantity: {{ item.quantity }}</p>
             </div>
-            <div class="text-right">
-              <p class="text-lg font-medium">
-                ${{ item.price * item.quantity }}
-              </p>
-            </div>
           </div>
-          <div class="mt-5 text-right">
-            <p class="text-xl font-semibold">Total: ${{ totalPrice() }}</p>
+          <div class="text-right">
+            <p class="text-lg font-medium">${{ item.price * item.quantity }}</p>
           </div>
         </div>
+        }
+        <div class="mt-5 text-right">
+          <p class="text-xl font-semibold">Total: ${{ totalPrice() }}</p>
+        </div>
+        }
       </div>
       <!-- Modal footer -->
       <div
